update-manager (1:0.95.2) jaunty; urgency=low

  * debian/rules 
    - remove the arch-build target
  * DistUpgrade/DistUpgradeController.py:
    - improvements to the sources.list rewriting, better tests

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 12 Nov 2008 14:12:50 +0100

update-manager (1:0.95.1) jaunty; urgency=low

  * DistUpgrade/DistUpgrade.glade, DistUpgrade/window_main.ui:
    - show 9.04 upgrade target
  * debian/rules:
    - calculate demotions based on intrepid->jaunty
  * DistUpgrade/DistUpgradeCache.py:
    - when the dist-upgrade calculation fails, show the reason
      why in the error dialog (LP: #281286)
    - when a meta package can not be upgraded, show a proper
      error message with the package in question
  * DistUpgrade/DistUpgradeQuirks.py:
    - abort ugprade from hardy if evms is used in /proc/mounts
      evms got removed from the archive in intrepid (LP: #292179)
    - do not add "relatime" if "noatime" is already given (thanks
      to  Ken Geis)
  * DistUpgrade/removal_blacklist.cfg:
    - remove overly broad postgresql regexp
  * DistUpgrade/DistUpgradeCache.py:
    - do not limit the removal blacklist to downloadable packages,
      this limits it too much
  * check-new-release:
    - install check for new releases into update-motd.d/daily

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 11 Nov 2008 11:22:41 +0100

update-manager (1:0.95) jaunty; urgency=low

  * updated for jaunty

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 05 Nov 2008 09:56:51 +0100

update-manager (1:0.93.34) intrepid-proposed; urgency=low

  * UpdateManager/UpdateManager.py:
    - simply the changelog download logic and make changelog
      fetching work properly again (now that the server side
      got improved as well) LP: #40058

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 04 Nov 2008 18:53:54 +0100

update-manager (1:0.93.33) intrepid; urgency=low

  [ Michael Vogt ]
  * DistUpgrade/DistUpgradeQuirks.py: