@@ -5,4 +5,5 @@ deb http://de.archive.ubuntu.com/ubuntu/ feisty main restricted multiverse
 deb-src http://archive.ubuntu.com/ubuntu/ feisty main restricted multiverse
 
 deb http://security.ubuntu.com/ubuntu/ feisty-security main restricted
+deb http://security.ubuntu.com/ubuntu/ feisty-security universe
 
