@@ -4,6 +4,10 @@ update-manager (1:0.95.2) jaunty; urgency=low
     - remove the arch-build target
   * DistUpgrade/DistUpgradeController.py:
     - improvements to the sources.list rewriting, better tests
+    - when rewriting sources.list check for inconsistencies between what
+      components are enabled in intrepid vs intrepid-updates and 
+      intrepid-security and automatically enable missing ones for
+      intrepid-updates and intrepid-security
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 12 Nov 2008 14:12:50 +0100
 
